<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
    </parent>

    <groupId>org.qubership.cloud</groupId>
    <artifactId>config-server-aggregator</artifactId>
    <version>3.0.1-SNAPSHOT</version>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <surefire-plugin.version>3.2.5</surefire-plugin.version>
        <jacoco.plugin.version>0.8.13</jacoco.plugin.version>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.basedir}/../config-server-report-aggregate/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.coverage.exclusions>
            **/migration/*.java
        </sonar.coverage.exclusions>
    </properties>

    <modules>
        <module>config-server-core</module>
        <module>config-server-app</module>
        <module>config-server-report-aggregate</module>
    </modules>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <snapshots />
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:https://github.com/Netcracker/qubership-core-config-server.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-core-config-server.git
        </developerConnection>
        <url>https://github.com/Netcracker/qubership-core-config-server</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/qubership-core-config-server</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>